<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        tools:context=".activity.SignInActivity">

    <RelativeLayout
        android:id="@+id/rel_welcome_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginRight="@dimen/dp_30"
        android:paddingTop="@dimen/dp_110">

        <TextView
            android:id="@+id/txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/segoe_bold"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_24"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_des_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_login"
            android:layout_marginTop="@dimen/sp_17"
            android:fontFamily="@font/segoe_ui"
            android:text="@string/please_sing_in_to_continue"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rel_email_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_welcome_text"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_30"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/edt_email"
            android:layout_centerVertical="true"
            android:background="@null"
            android:fontFamily="@font/segoe_ui"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_50"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/under_line_gray"
            android:textSize="@dimen/sp_15" />

    </LinearLayout>

    <View
        android:id="@+id/view_email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@+id/rel_email_info"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_5"
        android:background="@color/under_line_gray" />

    <LinearLayout
        android:id="@+id/rel_pass_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_email"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_30"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            />

        <EditText
            android:id="@+id/edt_password_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/edt_email"
            android:layout_centerVertical="true"
            android:background="@null"
            android:fontFamily="@font/segoe_ui"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/dp_10"
            android:paddingLeft="@dimen/dp_50"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/under_line_gray"
            android:textSize="@dimen/sp_15" />

    </LinearLayout>

    <View
        android:id="@+id/view_pass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@+id/rel_pass_info"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:layout_marginBottom="@dimen/dp_5"
        android:background="@color/under_line_gray" />

    <TextView
        android:id="@+id/txt_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_pass"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:fontFamily="@font/segoe_ui"
        android:padding="@dimen/dp_10"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18" />

    <CheckBox
        android:id="@+id/chk_terms_condition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_forgot_pass"
        android:layout_marginLeft="22dp"
        android:layout_marginRight="@dimen/dp_20"
        android:fontFamily="@font/segoe_ui"
        android:gravity="center_vertical"
        android:padding="@dimen/dp_5"
        android:text="@string/by_proceeding"
        android:textSize="@dimen/sp_12"
        app:buttonTint="@color/app_log_blue" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chk_terms_condition"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@drawable/logincurvedshape"
        android:fontFamily="@font/segoe_ui"
        android:text="@string/log_in"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_dont_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:fontFamily="@font/segoe_ui"
        android:padding="@dimen/dp_10"
        android:text="@string/donot_have_an_account_signup"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18" />

</RelativeLayout>